Teste forhindring av scroll utenfor skuff

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full font-sans bg-white scroll-pt-10 scroll-smooth" style="scrollbar-color:var(--color-slate-500) var(--color-slate-200)">
+<html lang="no" class="h-full font-sans bg-white scroll-pt-10 scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
