--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -574,8 +574,10 @@
   }
 
   .tocHighlight {
-    background-color: --alpha(var(--color-deepblue-50) / 75%);
-    transition: background 200ms ease-in-out;
+    @media (width > 1280px) {
+      background-color: --alpha(var(--color-deepblue-50) / 75%);
+      transition: background 200ms ease-in-out;
+    }
   }
 }
 
@@ -670,4 +672,8 @@
 }
 @utility small-caps {
   font-variant-caps: all-small-caps;
+}
+
+body:has(.drawerOpen) {
+  overflow:hidden;
 }
