--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -4,7 +4,10 @@
 
   {% set chapters = collections[chapters] | sort(false, false, 'data.order') %}
 
-  <main class="relative grid items-start pt-16 pb-16 grid-cols-article toc-highlight overflow-clip" data-theme="sykepenger" x-data="{ chapterIndex: 0 }">
+  <main 
+    class="relative grid items-start pt-16 pb-16 grid-cols-article toc-highlight overflow-clip" 
+    x-data="{ chapterIndex: 0 }"
+  >
     <div class="mb-3 col-pictogram" style="--pictogram: var(--color-deepblue-100)">
       {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-deepblue-900 w-16 h-16 sm:w-20 sm:h-20 -translate-x-1') | safe  }}
     </div>
@@ -31,15 +34,15 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse sticky #}
-    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc px-4 lg:pr-0 pt-3 pb-6 mb-4" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
+    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc px-4 lg:pr-0" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
       <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20" >
-        <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-0.5') | safe  }}</a>
+        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-0.5') | safe  }}
         <span>Innhold på siden</span>
       </h2>
-      <ul class="ml-2 lg:text-fluid-16-18/normal">
+      <ul class="pb-4 ml-2 lg:text-fluid-16-18/normal">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
-        <li class="border-l-2 border-slate-300" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'lg:border-deepblue-600'">
+        <li class="border-l-2 border-slate-300" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'lg:border-deepblue-500'">
           <a class="inline-block py-1.5 pl-4 pr-8 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 text-deepblue-900" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
             {{ chapter.data.title }}
           </a>
@@ -47,7 +50,7 @@
           <ul class="hidden pb-3" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'lg:block'">
             {% for item in chapter.templateContent | tocData %}
             <li>
-              <a class="inline-block py-1.5 pr-6 pl-9 underline text-deepblue-900 hover:text-blue-700 decoration-slate-800/40 opacity-85 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
+              <a class="inline-block py-1.5 pr-6 pl-8 underline text-deepblue-900 hover:text-blue-700 decoration-slate-800/40 opacity-85 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
                 <span>{{ item.text }}</span>
               </a>
             </li>
@@ -59,25 +62,31 @@
       </ul>
     </div>
 
-    {# Innholdsfortegnelse fixed #}
-    <div 
-        class="sticky top-2 right-0 w-max max-w-[80vw] z-50 row-start-5 col-end-[full] lg:hidden" 
-        x-show="tocFixed" x-bind:class="tocOpen && 'min-w-[320px]'"
-        x-transition:enter="transition ease-out duration-200"
-        x-transition:enter-start="opacity-0 scale-90"
-        x-transition:enter-end="opacity-100 scale-100"
-        x-transition:leave="transition ease-in duration-200"
-        x-transition:leave-start="opacity-100 scale-100"
-        x-transition:leave-end="opacity-0 scale-90"    
-    >
-      <button type="button" class="flex items-center w-full gap-1 px-4 pt-2.5 pb-2 font-semibold text-white cursor-pointer pop bg-deepblue-800 text-fluid-18-20 hover:bg-deepblue-700" x-on:click="tocOpen = !tocOpen" x-bind:class="tocOpen ? 'rounded-tl-2xl drawerOpen' : 'rounded-l-full'">
-        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 shrink-0 -translate-y-0.5 -translate-x-0.5') | safe  }}</a>
-        <span class="pr-4">Innhold på siden</span>
-        <span class="ml-auto -translate-y-0.5" x-bind:class="tocOpen && 'rotate-180 transition-transform duration-200'">
-        {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('') | safe }}</span>
+    {# Innholdsfortegnelse mobile #}
+    <div x-show="tocFixed" class="sticky top-4 right-0 w-0 z-50 row-start-5 col-[full-end] lg:hidden" x-bind:class="tocOpen && '!fixed'">
+      <button type="button" class="absolute right-0 flex items-center gap-1.5 whitespace-nowrap px-3.5  pt-2.5 pb-2 font-semibold cursor-pointer pop  text-fluid-18-20 rounded-l-full transition-all" x-on:click="tocOpen = !tocOpen" x-bind:class="tocOpen ? 'drawerOpen w-[368px] mr-4 max-w-[70vw] bg-white' : 'bg-deepblue-800 text-white hover:bg-deepblue-700 w-fit'">
+        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 shrink-0 -translate-y-px -translate-x-px') | safe  }}
+        <span>Innhold på siden</span>
+        <span x-show="!tocOpen">
+          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 shrink-0 -translate-y-px ml-4') | safe }}
+        </span>
+        <span class="ml-auto" x-show="tocOpen">
+        {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-6 h-6 shrink-0') | safe }}
+        </span>
       </button>
-      <div x-show="tocOpen" class="h-[93dvh] pt-2 overflow-y-auto bg-white rounded-bl-2xl -z-10 overscroll-y-contain" style="scrollbar-color:var(--color-slate-400) #0000" x-on:click.outside="tocOpen = false">
-        <ul class="px-4 mb-6 ml-2 lg:text-fluid-16-18/normal">
+
+
+      <div 
+        class="h-[90dvh] px-2 absolute top-0 pt-16 right-0 w-96 max-w-[70vw] overflow-y-auto overscroll-contain -z-10 bg-white rounded-l-2xl"
+        x-show="tocOpen"
+        x-transition:enter="transition ease-out duration-150"
+        x-transition:enter-start="opacity-0 translate-x-full"
+        x-transition:enter-end="opacity-100 translate-x-0"
+        x-transition:leave="transition ease-in duration-150"
+        x-transition:leave-start="opacity-100 translate-x-0"
+        x-transition:leave-end="opacity-0 translate-x-full"
+      >
+        <ul class="px-4 mb-6 lg:text-fluid-16-18/normal">
           {% for chapter in chapters %}
           {% set chapterIndex = loop.index %}
           <li class="border-l-2 border-slate-300">
@@ -98,10 +107,10 @@
           </li>
           {% endfor %}
         </ul>
-        <div class="sticky bottom-0 pb-2 bg-white">
+        <div class="sticky bottom-0 py-4 bg-white rounded-bl-2xl">
           <div class="absolute inset-x-0 h-8 pointer-events-none bottom-full bg-gradient-to-t from-white to-transparent"></div>
-          <a class="inline-flex items-center gap-1 px-1.5 ml-2 underline text-fluid-16-18 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" x-on:click="tocOpen = false" href="#toppen">
-            {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6') | safe }}
+          <a class="inline-flex items-center gap-1 px-1.5 underline text-fluid-16-18 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" x-on:click="tocOpen = false" href="#toppen">
+            {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6 -translate-x-px') | safe }}
             <span>Til toppen av siden</span>
           </a>
         </div>
