Litt mer avstand til sidespalten

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -34,7 +34,7 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse sticky #}
-    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc lg:pr-0" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
+    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 lg:pl-8 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
       <h2 class="sticky top-0 z-10 hidden tracking-wider uppercase pt-7 lg:block lg:bg-white text-fluid-14-16 opacity-80" >
         Innhold på denne siden
       </h2>
